# rust-ws

./: .gitignore  Cargo.toml  README.md  README_CN.md
benches/: benchmarks.rs  utf8.rs
examples/: autobahn_server.rs  axum_server.rs  echo_server.rs  stress_server.rs
examples/chat_room/: README.md
examples/chat_room/frontend/: index.html  package-lock.json  package.json  vite.config.ts
examples/chat_room/frontend/src/: App.tsx  main.tsx  types.ts
examples/chat_room/frontend/src/hooks/: useChat.ts
examples/chat_room/server/: Cargo.toml
examples/chat_room/server/src/: handler.rs  main.rs  room.rs  types.rs
examples/file_transfer/: README.md
examples/file_transfer/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
examples/file_transfer/frontend/src/: App.tsx  index.css  types.ts
examples/file_transfer/server/: Cargo.toml
examples/file_transfer/server/src/: handler.rs  main.rs  room.rs  types.rs
examples/screen_share/: README.md
examples/screen_share/frontend/: index.html  package-lock.json  package.json
examples/screen_share/frontend/src/: App.tsx  index.css  main.tsx  types.ts
examples/screen_share/server/: Cargo.toml
examples/screen_share/server/src/: handler.rs  main.rs  room.rs  types.rs
src/: config.rs  lib.rs  message.rs
src/codec/: framed.rs
src/connection/: connection.rs
src/extensions/: deflate.rs  mod.rs
src/protocol/: assembler.rs  frame.rs  handshake.rs  mask.rs  mod.rs  utf8.rs  utf8_simd.rs
tests/: concurrency.rs  stress.rs
tests/harness/: server.rs
(+12 files in other folders)
