[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat_server"
path = "src/main.rs"

[dependencies]
rsws = { path = "../../..", features = ["async-tokio"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
