[package]
name = "file_transfer_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "file_transfer_server"
path = "src/main.rs"

[dependencies]
rsws = { path = "../../..", features = ["async-tokio"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.4", features = ["derive"] }
